Fix for insecure (http:) content warning, just a typo.

--- a/source/cloud-compliance/misc.html.slim
+++ b/source/cloud-compliance/misc.html.slim
@@ -77,7 +77,7 @@ section#compliance-video.section-article.bg-gray-11
         img.lozad alt="Complete Cloud Compliance" src=book_thumb+'?w=150&fm=png&fl=png8' data-src=book_thumb+'?w=600'
   .row.align-center.align-middle
     .columns.flex-container.align-middle.align-center.small-12.medium-6.large-4.text-center.pad--xl
-      img.lozad data-src="http://images.ctfassets.net/189dvqdsjh46/2yyrhvg12wySaoSgyQ6C6G/0ec44a3443d3e89690e511f8f85d44fe/guide-tco-compliance-2018-thumb.png?fit=thumb&w=500&h=500" alt="Guide" width="250"
+      img.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/2yyrhvg12wySaoSgyQ6C6G/0ec44a3443d3e89690e511f8f85d44fe/guide-tco-compliance-2018-thumb.png?fit=thumb&w=500&h=500" alt="Guide" width="250"
     .columns.small-12.medium-6.large-6
       .line-length
         h3.headline-3.text-bold.nomargin Datica Guides
