--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -89,7 +89,8 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
     .column.relative.has-blob
       .card.container-color--trans.relative.z-5
         .card-section
-          = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
+          svg id="product-icon-cpaas" class="icon-size--xlarge"
+            use.symbol-icon xlink:href="#cpaas-logo" href="#cpaas-logo"
           .subhead--spaced CPaaS
           h3.headline-4 Compliant Platform <br />as a Service
           p.strip.strip-small.strip-cpaas
@@ -101,7 +102,8 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
     .column.relative.has-blob
       .card.container-color--trans.relative.z-5
         .card-section
-          = inline_svg("cks-logo-w", class: "icon-size--xlarge")
+          svg id="product-icon-cks" class="icon-size--xlarge"
+            use.symbol-icon xlink:href="#cks-logo" href="#cks-logo"
           .subhead--spaced CKS
           h3.headline-4 Compliant Kubernetes Service
           p.strip.strip-small.strip-cks
@@ -113,7 +115,8 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
     .column.relative.has-blob
       .card.container-color--trans.relative.z-5
         .card-section
-          = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
+          svg id="product-icon-ccms" class="icon-size--xlarge"
+            use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
           .subhead--spaced CCMS
           h3.headline-4 Cloud Compliance Management System 
           p.strip.strip-small.strip-ccms
