--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -13,75 +13,106 @@ ruby:
   current_page.data.share_image = image_share_default
 
 scss:
+  .nav__item.nav__contact .contact-button {
+    display: none; // hide this, you're here
+  }
   .pricing-content {
     .headline-5 {
       margin-bottom: 0.3em;
+      font-weight: 500;
     }
     p {
       font-size: 0.9rem;
     }
+    .product-block {
+      a {
+        color: black;
+        &:hover {
+          color: #1055ff;
+        }
+      }
+      .item-check {
+        //margin-left: 2rem;
+        &::before {
+          vertical-align: bottom;
+          display: inline-block;
+          width: 1.4em;
+          height: 1.4em;
+          //margin-bottom: -0.3em;
+          content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18'%3E%3Cpath fill='%23009c63' d='M6.61 11.89L3.5 8.78 2.44 9.84 6.61 14l8.95-8.95L14.5 4z'/%3E%3C/svg%3E");
+        }
+      }
+    }
+    .product-icon {
+      margin-right: 1rem;
+    }
   }
 .strip-bright.strip-small
-.bg-gray-2.container-image-fill.lozad data-background-image=bg_product_dark
-  = partial "partials/head/header", :locals => { :style => "light" }
-  section#pricing-tiers.section-article
+.bg-gray-12.container-image-fill.lozad data-background-image=bg_product_light
+  = partial "partials/head/header", :locals => { :style => "dark" }
+  section.section-article
     .row.align-center.group
       .columns.small-12
         h1.headline-2.pricing-headline Get Pricing
         / p.lead 
-    .row.align-center
-      .columns.small-12
-        .callout.callout--dark.callout--large.pricing-callout style="background-color: rgba(0, 0, 0, 0.3);"
-          .row.align-center
-            .columns.small-12.medium-large-6.pricing-content
-              .group
-                h2.headline-4
-                  a.link--white href="/cloud-compliance-management-system" title="Cloud Compliance Management" Cloud Compliance Management System
-                  / svg id="product-icon-ccms" class="icon-inline"
-                    use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
-                h4.headline-5 
-                  = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
-                  | Resource Subscription
-                p Starting early 2019, customers can use the CCMS by subscribing per cloud service being monitored.
-              .group
-                h2.headline-4
-                  a.link--white href="/compliant-kubernetes-service" title="Compliant Kubernetes Service" Compliant Kubernetes Service Pricing
-                h4.headline-5 
-                  = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
-                  | Product Subscription
-                p CKS subscription is per production Kubernetes cluster. Currently available on AWS. You pay infrastructure costs, like EC2 and S3, directly to AWS because we install the cluster onto your existing AWS account.
-              .group
-                h2.headline-4
-                  a.link--white href="/compliant-managed-integration" title="Compliant Managed Integration" Compliant Managed Integration Pricing
-                h4.headline-5
-                  = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
-                  | Product Subscription (Required)
-                p CMI product currently available on AWS or Azure. We deploy it into Datica's existing cloud account. All infrastructure costs, like RAM and storage, are absorbed by Datica. We then maintain all DevOps, security, compliance, and networking duties related to the integration stack itself and all live integrations it powers.
-                h4.headline-5
-                  = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--gray-12")
-                  | Service Subscription (Optional)
-                p Leverage Datica's expertise to help instantiate any new integration sites. Hundreds of live sites have been integrated over the last four years via this service.
-              .group
-                h2.headline-4
-                  a.link--white href="/compliant-platform-as-a-service" title="Compliant Platform as a Service" Compliant Platform as a Service
-                h4.headline-5 
-                  = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
-                  | Environment Subscription
-                p Customers purchase container-based environments which they can deploy their applications into. No additional customizations available outside of general availability. All infrastructure costs are pass-through in addition to the environment price, pegged to AWS costs for EC2, EBS, etc.
+    .row.align-center.pricing-content
+      .columns.small-12.medium-large-6
+        .row.group.collapse.product-block
+          .columns.shrink
+            svg id="product-icon-ccms" class="product-icon icon-size--large"
+              use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
+          .columns
+            h2.headline-4.text-regular
+              a href="/cloud-compliance-management-system" title="Cloud Compliance Management System" Cloud Compliance Management System
+            h4.headline-5 Resource Subscription
+            p Starting early 2019, customers can use the CCMS by subscribing per cloud service being monitored.
+          
+        .row.group.collapse.product-block
+          .columns.shrink
+            svg id="product-icon-cks" class="product-icon icon-size--large"
+              use.symbol-icon xlink:href="#cks-logo" href="#cks-logo"
+          .columns
+            h2.headline-4.text-regular
+              a href="/compliant-kubernetes-service" title="Compliant Kubernetes Service" Compliant Kubernetes Service
+            h4.headline-5 Product Subscription
+            p CKS subscription is per production Kubernetes cluster. Currently available on AWS. You pay infrastructure costs, like EC2 and S3, directly to AWS because we install the cluster onto your existing AWS account.
 
-              p 
-                em Ask us about ad-hoc compliance services related to your infrastructure.
-            #cta.columns.small-12.medium-large-6
-              .callout.pad--lg.drop.form-embed.nomargin.pricing-form.group
-                / h3.headline-4.text-center Request Pricing
-                p Thank you for your interest in the Datica product suite. After completion, a representative will reach out to answer any questions.
-                - the_form = data.site.forms['pdrdbrjyUKoooYI8EUAYw']
-                = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
+        .row.group.collapse.product-block
+          .columns.shrink
+            svg id="product-icon-ccms" class="product-icon icon-size--large"
+              use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
+          .columns
+            h2.headline-4.text-regular
+              a href="/compliant-platform-as-a-service" title="Compliant Platform as a Service" Compliant Platform as a Service
+            h4.headline-5 Environment Subscription
+            p Customers purchase container-based environments which they can deploy their applications into. No additional customizations available outside of general availability. All infrastructure costs are pass-through in addition to the environment price, pegged to AWS costs for EC2, EBS, etc.
+          
+        .row.group.collapse.product-block
+          .columns.shrink
+            svg id="product-icon-cpaas" class="product-icon icon-size--large"
+              use.symbol-icon xlink:href="#cpaas-logo" href="#cpaas-logo"
+          .columns
+            h2.headline-4.text-regular
+              a href="/compliant-managed-integration" title="Compliant Managed Integration" Compliant Managed Integration Pricing
+            h4.headline-5 Product Subscription (Required)
+            p CMI product currently available on AWS or Azure. We deploy it into Datica's existing cloud account. All infrastructure costs, like RAM and storage, are absorbed by Datica. We then maintain all DevOps, security, compliance, and networking duties related to the integration stack itself and all live integrations it powers.
+            h4.headline-5 Service Subscription (Optional)
+            p Leverage Datica's expertise to help instantiate any new integration sites. Hundreds of live sites have been integrated over the last four years via this service.
+
+      #cta.columns.small-12.medium-large-6.large-5
+        .callout.pad--lg.drop.form-embed.nomargin.pricing-form.group
+          / h3.headline-4.text-center Request Pricing
+          p Thank you for your interest in the Datica product suite. A representative will reach out to schedule time to answer your questions.
+          - the_form = data.site.forms['pdrdbrjyUKoooYI8EUAYw']
+          = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
+        p 
+          em Ask us about ad-hoc compliance services related to your infrastructure.
 
 
+  section.section-article--med
     .row.align-center
       .columns.small-12.medium-12.large-8.text-center
         h2.headline-3 Not sure what you need? Start here.
     .button-group.menu.align-center.group
-      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST assessment", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
-      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/ehr-integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST assessment", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button hollow button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/ehr-integration/", :button_classes => "button hollow button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
