Custom, small versions of product logos; removing unused JS; various cleanup.

--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -59,7 +59,7 @@ nav.nav data-theme=theme
                               .media-object.nav__product
                                 .media-object-section
                                   svg id="product-#{child.icon}" class="icon-size--medium"
-                                    use.symbol-icon xlink:href="##{child.icon}" href="##{child.icon}"
+                                    use.symbol-icon xlink:href="##{child.icon}-sm" href="##{child.icon}-sm"
                                   /= inline_svg(child.icon, class: "icon-size--medium")
                                 .media-object-section.media-object--info.main-section.align-self-middle
                                   h4.nav__product-title = child.title
