Updated menu toggle

--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -24,7 +24,7 @@ nav.nav data-theme=theme
     a.nav-logo--link href="/" title="Datica Home"
       svg id="datica-logo-mobile" class="nav-logo"
         use.symbol-icon xlink:href="#datica-logo-horiz"
-    a.toggle-me#nav-toggle href="#"
+    a.toggle-me#nav-toggle title="Menu" href="#"
       span
       span
   ul.menu.nav__container.mobile-toggle-target#nav-target
