Reverting use of svg symbols for *large* icons. Symbols should only be for icons that are very common. Anywhere they are ad-hoc, use inline_svg ruby helper to inline them for styling.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -84,9 +84,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
         .column.relative.has-blob
           a.link-light-plain.card.container-color--trans.relative.z-5 title="Cloud Compliance Management System " href="/cloud-compliance-management-system/"
             .card-section
-              svg id="product-group-icon-ccms" class="icon-size--large"
-                use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
-              /= inline_svg("ccms-logo-w", class: "icon-size--xlarge")
+              = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
               .subhead--spaced CCMS
               h3.headline-4 Cloud Compliance Management System
               p.strip.strip-small.strip-ccms
@@ -98,9 +96,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
         .column.relative.has-blob
           a.link-light-plain.card.container-color--trans.relative.z-5 title="Compliant Managed Integration" href="/compliant-managed-integration/"
             .card-section
-              svg id="product-group-icon-cmi" class="icon-size--large"
-                use.symbol-icon xlink:href="#cmi-logo" href="#cmi-logo"
-              /= inline_svg("cmi-logo-w", class: "icon-size--xlarge")
+              = inline_svg("cmi-logo-w", class: "icon-size--xlarge")
               .subhead--spaced CMI
               h3.headline-4 Compliant Managed Integration
               p.strip.strip-small.strip-cmi
@@ -112,9 +108,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
         .column.relative.has-blob
           a.link-light-plain.card.container-color--trans.relative.z-5 title="Compliant Kubernetes Service" href="/compliant-kubernetes-service/"
             .card-section
-              svg id="product-group-icon-cks" class="icon-size--large"
-                use.symbol-icon xlink:href="#cks-logo" href="#cks-logo"
-              /= inline_svg("cks-logo-w", class: "icon-size--xlarge")
+              = inline_svg("cks-logo-w", class: "icon-size--xlarge")
               .subhead--spaced CKS
               h3.headline-4 Compliant Kubernetes Service
               p.strip.strip-small.strip-cks
@@ -126,9 +120,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
         .column.relative.has-blob
           a.link-light-plain.card.container-color--trans.relative.z-5 title="Compliant Platform as a Service" href="/compliant-platform-as-a-service/"
             .card-section
-              svg id="product-group-icon-cpaas" class="icon-size--large"
-                use.symbol-icon xlink:href="#cpaas-logo" href="#cpaas-logo"
-              /= inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
+              = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
               .subhead--spaced CPaaS
               h3.headline-4 Compliant Platform <br />as a Service
               p.strip.strip-small.strip-cpaas
