--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -59,8 +59,7 @@ scss:
       .columns.small-12.medium-large-6
         .row.group.collapse.product-block
           .columns.shrink
-            svg id="product-icon-ccms" class="product-icon icon-size--large"
-              use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
+            = inline_svg("ccms-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.text-regular
               a href="/cloud-compliance-management-system" title="Cloud Compliance Management System" Cloud Compliance Management System
@@ -69,8 +68,7 @@ scss:
           
         .row.group.collapse.product-block
           .columns.shrink
-            svg id="product-icon-cks" class="product-icon icon-size--large"
-              use.symbol-icon xlink:href="#cks-logo" href="#cks-logo"
+            = inline_svg("cks-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.text-regular
               a href="/compliant-kubernetes-service" title="Compliant Kubernetes Service" Compliant Kubernetes Service
@@ -79,8 +77,7 @@ scss:
 
         .row.group.collapse.product-block
           .columns.shrink
-            svg id="product-icon-ccms" class="product-icon icon-size--large"
-              use.symbol-icon xlink:href="#ccms-logo" href="#ccms-logo"
+            = inline_svg("cpaas-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.text-regular
               a href="/compliant-platform-as-a-service" title="Compliant Platform as a Service" Compliant Platform as a Service
@@ -89,8 +86,7 @@ scss:
           
         .row.group.collapse.product-block
           .columns.shrink
-            svg id="product-icon-cpaas" class="product-icon icon-size--large"
-              use.symbol-icon xlink:href="#cpaas-logo" href="#cpaas-logo"
+            = inline_svg("cmi-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.text-regular
               a href="/compliant-managed-integration" title="Compliant Managed Integration" Compliant Managed Integration
@@ -113,5 +109,5 @@ scss:
       .columns.small-12.medium-12.large-8.text-center
         h2.headline-3 Not sure what you need? Start here.
     .button-group.menu.align-center.group
-      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST assessment", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button hollow button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
-      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/ehr-integration/", :button_classes => "button hollow button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST assessment", :url => "/cloud-compliance/", :icon_align => "left", :button_classes => "button hollow no-nudge", :icon => "icon-chevron-left", :item_id => "get-compliance", :data_track_group => "compliance" }
+      = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/ehr-integration/", :button_classes => "button hollow no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get-integration", :data_track_group => "integration" }
