--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -82,7 +82,7 @@
 @import 'modules/people';
 @import 'modules/buttons';
 @import 'modules/webinars';
-@import 'sitewide';
+// @import 'sitewide';
 @import 'modules/nav';
 
 // Import any vendors here
