--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -96,10 +96,48 @@ dd + dt {
 }
 footer {
     font-size: smaller;
-    a.active, a[aria-current]:not([aria-current="false"]) {
-        font-weight: $font-weight-bold !important;
+    $alpha: 0.6;
+    .headline-6 {
+        opacity: 1;
     }
-    // color: white(0.6) !important; // assumes a dark footer
+    // li {
+    //     line-height: 1.3;
+    // }
+    a {
+        transition: color 200ms linear, opacity 200ms linear, border-color 200ms linear;
+        opacity: $alpha;
+        padding-bottom: 2px;
+        border-bottom: 2px solid transparent;
+    }
+    a.active, a[aria-current]:not([aria-current="false"]) { // current_page helper
+        font-weight: $font-weight-bold !important;
+        opacity: 1;
+    }
+    &[data-theme="light"] {
+        a, .headline-6 {
+            color: white;
+        }
+        a:hover {
+            opacity: 1;
+            color: $color_yellow-glow;
+            border-bottom: 1px solid transparentize($color_yellow-glow, 0.2);
+        }
+    }
+    &[data-theme="dark"] {
+        a, .headline-6 {
+            color: black;
+        }
+        a:hover {
+            opacity: 1;
+            color: $color_blue;
+            border-bottom: 1px solid transparentize($color_blue, 0.2);
+        }
+    }
+    a.nav-logo--link {
+        &:hover {
+            border-bottom: none;
+        }
+    }
 }
 
 .quote {
