--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -143,6 +143,7 @@ $color_blue:             hsl(219, 94%, 48%);
 $color_green:            hsl(158, 100%, 34%); //hsl(150, 85%, 39%); // hsl(160, 100%, 34%);
 $color_shadow:           #DCE4E9;
 $color_highlight-yellow: #FEDB45;
+$color_yellow:           $color_highlight-yellow;
 $color_red:              hsl(349, 72%, 39%); // cool darker red
 $color_deep:             #010101;
 $color_deep-alt:         #1E2127;
