New & updated customer logos, quick CPaaS updates

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -19,7 +19,7 @@ block_tech:
   -
     title: "The most popular databases in the world"
     body: "Pick your preference. CPaaS handles the latest leading database technologies, and automatically configures them to be compliant."
-    image: https://images.ctfassets.net/189dvqdsjh46/2pR1WKIz4cwi0iIemKWwyo/746da97d1e3de62098a23b879e6c3da4/technology-dbs.png
+    image: https://images.ctfassets.net/189dvqdsjh46/2pR1WKIz4cwi0iIemKWwyo/339369b58e63c5dc4f19c429d0684237/technology-dbs.png
   -
     title: "Mature utilities"
     body: "From workers to caching, CPaaS gives you the flexibility to configure your environments your way with useful add-ons."
@@ -124,7 +124,7 @@ section#tech.section-article.container-color--white
     .row.align-center
       .columns.small-6.large-5
         ul.list-check.text-larger
-          li Quickly deploy IPSEC or TLS VPNs in minutes
+          / li Quickly deploy IPSEC or TLS VPNs in minutes
           li Nightly backups
           li Proactive security patching. <em>Remember WannaCry? We were patched 1 month prior to it hitting.</em>
           li Automation of network overlays across Docker containers
