Logo updates, fix for DB list

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -116,7 +116,7 @@ section#tech.section-article.container-color--white
           .column.group
             h4.headline-5 = block.title
             p = block.body
-            img.lozad data-src = block.image
+            img.lozad.logo-size--medium alt="logos" data-src = block.image
 
   #capabilities.row.align-center
     .columns.small-12.large-8
