--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -11,6 +11,22 @@ layout: products
 collectionName: "products"
 collectionOrder: 1
 priority: "0.9"
+subnav:
+  -
+    title: "Overview"
+    slug: "overview"
+  -
+    title: "Use Cases"
+    slug: "use-cases"
+  -
+    title: "Benefits"
+    slug: "benefits"
+  -
+    title: "Customer Proof"
+    slug: "proof"
+  -
+    title: "Get Started"
+    slug: "start"
 block_tech:
   -
     title: "The latest open source languages"
@@ -53,7 +69,19 @@ block_benefits:
 - current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/5nhUL1CBYQIKy4Qu822yws/0e527937543ca6793dafda4bfb834930/product-cpaas-share.jpg'
 - the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
 
-section#intro.section-article.container-gray-12
+#top.show-for-large data-sticky-container="data-sticky-container"
+  .subnav.sticky.sticky-nav.bg-gray-11 data-sticky="data-sticky" data-options="marginTop:0; topAnchor:top; activeClass:active; stickyOn:large;" data-theme="light"
+    ul.menu.menu-secondary.align-center data-magellan="data-magellan"
+      / li.nav-logo
+        a.nav-logo--link href="#top" title="CPaaS"
+          svg#product-cpaas-logo.nav-logo
+            use.symbol-icon href="#cpaas-logo" xlink:href="#cpaas-logo" 
+
+      - current_page.data.subnav.each do | item |
+        li.menu-item
+          a.menu-item--link href="##{item.slug}" title=item.title = item.title
+
+section.section-article.container-gray-12 id=current_page.data.subnav[0].slug data-magellan-target=current_page.data.subnav[0].slug
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h1.headline-3 The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications
@@ -63,7 +91,7 @@ section#intro.section-article.container-gray-12
       - diagram = "https://images.ctfassets.net/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/149a669a8d1895a5b6fd8fa1848905db/platform-overview-diagram-2x.png"
       img.img-crisp.lozad.group--2x height="475" src="https://images.ctfassets.net/189dvqdsjh46/1GQpi4JS8UIYUMyykysou0/b83234d89d75e91da39de18885072dff/platform-overview-diagram-lqip.svg" alt="Datica Compliant Platform as a Service Diagram" data-src="#{diagram}?w=640" data-srcset="#{diagram}?w=640 800w, #{diagram}?w=1200 1000w, #{diagram} 1200w" /
 
-  #building.row.align-center
+  .row.align-center id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
     .columns.small-12.text-center
       h2.headline-4.nomargin Building On CPaaS
       p.lead See how developers build compliant applications
@@ -172,7 +200,7 @@ section#benefits.section-article.container-color--gray-dark-grad-mono-noise
       .columns.small-12.medium-4.text--blue-glow = item.feature
       .columns.small-12.medium-5.text--green-glow = item.benefit
 
-section#customers.section-article.container-gray-12
+section.section-article.container-gray-12 id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
   .text-center.group
     h2.headline-3.text-light Build <strong>Breakthrough</strong> Healthcare Solutions
   = partial "partials/content/video-quote", :locals => { :classes => "group--2x" }
@@ -188,7 +216,7 @@ section#customers.section-article.container-gray-12
         .column
           = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cust } 
 
-aside#ctaBottom.container-color--dark-grad-blue
+aside.container-color--dark-grad-blue id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
   .section-article.container-image--center.lozad data-background-image="/public/img/art/platform-iso-illustration-bg.svg"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
